# nodedb

./: .gitattributes  build_status.md
docs/: README.md  ai-integration.md  architecture.md  code-generation.md  dart-packages.md  federation.md  ffi.md  getting-started.md  graph-engine.md  how_to_use.md  inspector.md  nosql-engine.md  provenance.md  query-system.md  rust-crates.md  security.md  transport.md  vector-engine.md
example/app/: README.md  pubspec.yaml
example/app/android/app/: build.gradle.kts
example/app/android/app/src/main/: AndroidManifest.xml
example/app/android/app/src/main/kotlin/com/nodedb/nodedb_example/: MainActivity.kt
example/app/ios/Runner/: Info.plist
example/app/ios/Runner.xcodeproj/: project.pbxproj
example/app/lib/: app.dart  main.dart
example/app/lib/database/: mesh_service.dart  product_database.dart  user_database.dart
example/app/lib/models/: product_models.dart  product_models.g.dart  product_models.nodedb.g.part  user_models.dart  user_models.g.dart  user_models.nodedb.g.part
example/app/lib/screens/: cache_screen.dart  mesh_screen.dart  orders_screen.dart  products_screen.dart  users_screen.dart
example/app/macos/Runner.xcodeproj/: project.pbxproj
example/app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/app/macos/Runner/Configs/: AppInfo.xcconfig
example/app/test/: widget_test.dart
example/statistics/: README.md  pubspec.yaml
example/statistics/android/app/: build.gradle.kts
example/statistics/android/app/src/main/: AndroidManifest.xml
example/statistics/android/app/src/main/kotlin/com/nodedb/statistics/: MainActivity.kt
example/statistics/ios/Runner/: Info.plist
example/statistics/ios/Runner.xcodeproj/: project.pbxproj
example/statistics/lib/: app.dart  main.dart  objectbox-model.json  objectbox.g.dart
example/statistics/lib/adapters/: db_adapter.dart  drift_adapter.dart  drift_adapter.g.dart  hive_adapter.dart  isar_adapter.dart  isar_adapter.g.dart  nodedb_adapter.dart  objectbox_adapter.dart  sqflite_adapter.dart
example/statistics/lib/benchmark/: benchmark_config.dart  benchmark_result.dart  benchmark_runner.dart
example/statistics/lib/models/: test_record.dart
example/statistics/lib/screens/: home_screen.dart  results_screen.dart  running_screen.dart
example/statistics/linux/: CMakeLists.txt
example/statistics/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/statistics/linux/runner/: my_application.cc
example/statistics/macos/Flutter/: GeneratedPluginRegistrant.swift
example/statistics/macos/Runner.xcodeproj/: project.pbxproj
example/statistics/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/statistics/macos/Runner/Configs/: AppInfo.xcconfig
example/statistics/web/: index.html
example/statistics/windows/: CMakeLists.txt
example/statistics/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/statistics/windows/runner/: Runner.rc  main.cpp
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/crates/nodedb-ai-provenance/: Cargo.toml
rust/crates/nodedb-ai-provenance/src/: blending.rs  config.rs  engine.rs  error.rs  lib.rs  types.rs
rust/crates/nodedb-ai-query/: Cargo.toml
rust/crates/nodedb-ai-query/src/: config.rs  engine.rs  error.rs  lib.rs  schema_validator.rs  types.rs
rust/crates/nodedb-crypto/: Cargo.toml
rust/crates/nodedb-crypto/src/: dek.rs  encryption.rs  envelope.rs  error.rs  identity.rs  lib.rs  types.rs
rust/crates/nodedb-crypto/tests/: integration.rs
rust/crates/nodedb-dac/: Cargo.toml
rust/crates/nodedb-dac/src/: engine.rs  error.rs  evaluator.rs  filter.rs  lib.rs  rule_manager.rs  types.rs
rust/crates/nodedb-dac/tests/: integration.rs
rust/crates/nodedb-federation/: Cargo.toml
rust/crates/nodedb-federation/src/: engine.rs  error.rs  group_manager.rs  lib.rs  peer_manager.rs  types.rs
rust/crates/nodedb-federation/tests/: integration.rs
rust/crates/nodedb-ffi/: Cargo.toml
rust/crates/nodedb-ffi/benches/: engine_benchmarks.rs
rust/crates/nodedb-ffi/src/: lib.rs  merge.rs  query_handler.rs  types.rs
rust/crates/nodedb-ffi/tests/: ffi_integration.rs
rust/crates/nodedb-graph/: Cargo.toml
rust/crates/nodedb-graph/examples/: graph_smoke_test.rs
rust/crates/nodedb-graph/src/: algorithm.rs  engine.rs  error.rs  lib.rs  traversal.rs  types.rs
rust/crates/nodedb-graph/tests/: integration.rs
rust/crates/nodedb-keyresolver/: Cargo.toml
rust/crates/nodedb-keyresolver/src/: engine.rs  error.rs  lib.rs  types.rs
rust/crates/nodedb-nosql/: Cargo.toml
rust/crates/nodedb-nosql/examples/: smoke_test.rs
rust/crates/nodedb-nosql/src/: access_history.rs  cache.rs  collection.rs  conflict.rs  database.rs  document.rs  error.rs  filter.rs  lib.rs  preferences.rs  query.rs  schema.rs  trigger.rs  trim.rs
rust/crates/nodedb-nosql/tests/: integration.rs
rust/crates/nodedb-provenance/: Cargo.toml
rust/crates/nodedb-provenance/src/: canonical.rs  confidence.rs  content_hash.rs  engine.rs  error.rs  lib.rs  types.rs  verification.rs
rust/crates/nodedb-storage/: Cargo.toml
rust/crates/nodedb-storage/src/: engine.rs  error.rs  id_gen.rs  lib.rs  migration.rs  serialization.rs  transaction.rs
rust/crates/nodedb-storage/tests/: integration.rs
rust/crates/nodedb-transport/: Cargo.toml
rust/crates/nodedb-transport/src/: audit.rs  client.rs  connection.rs  connection_pool.rs  credential.rs  discovery.rs  engine.rs  error.rs  gossip.rs  handshake.rs  lib.rs  mesh.rs  pairing.rs  query_handler.rs  router.rs  server.rs  tls.rs  types.rs
rust/crates/nodedb-transport/tests/: integration.rs
rust/crates/nodedb-vector/: Cargo.toml
rust/crates/nodedb-vector/examples/: vector_smoke_test.rs
rust/crates/nodedb-vector/src/: engine.rs  error.rs  lib.rs  types.rs
rust/crates/nodedb-vector/tests/: integration.rs
scripts/: build_targets.sh
