[package]
name = "nodedb-ai-provenance"
version.workspace = true
edition.workspace = true

[dependencies]
nodedb-provenance = { path = "../nodedb-provenance" }
nodedb-storage = { path = "../nodedb-storage" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
