[package]
name = "nodedb-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
