[package]
name = "nodedb-federation"
version.workspace = true
edition.workspace = true

[dependencies]
nodedb-storage = { path = "../nodedb-storage" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
