[package]
name = "nodedb-nosql"
version.workspace = true
edition.workspace = true

[dependencies]
nodedb-storage = { path = "../nodedb-storage" }
nodedb-crypto = { path = "../nodedb-crypto" }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
